objects/Position__c.object
<CustomObject>
    <description>This object stores information about the open job
positions at our company.</description>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysOpen__c</fullName>
        <description>The number of days a position has been (or
was) open</description>
        <formula>IF( ISNULL( CloseDate__c ) ,  TODAY() - OpenDate__c ,  CloseDate__c  -  OpenDate__c )</formula>
        <label>DaysOpen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EducationalRequirements__c</fullName>
        <label>EducationalRequirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FunctionalArea__c</fullName>
        <label>FunctionalArea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HumanResources</fullName>
                </value>
                <value>
                    <fullName>InformationTechnology</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>RetailOperations</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HireBy__c</fullName>
        <defaultValue>TODAY()  + 90</defaultValue>
        <label>HireBy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HiringManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HiringManager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobDescription__c</fullName>
        <label>JobDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JobLevel__c</fullName>
        <label>JobLevel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FunctionalArea__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FN-100</fullName>
                </value>
                <value>
                    <fullName>FN-200</fullName>
                </value>
                <value>
                    <fullName>FN-300</fullName>
                </value>
                <value>
                    <fullName>FN-400</fullName>
                </value>
                <value>
                    <fullName>HR-100</fullName>
                </value>
                <value>
                    <fullName>HR-200</fullName>
                </value>
                <value>
                    <fullName>HR-300</fullName>
                </value>
                <value>
                    <fullName>HR-400</fullName>
                </value>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>IT-400</fullName>
                </value>
                <value>
                    <fullName>MC-100</fullName>
                </value>
                <value>
                    <fullName>MC-200</fullName>
                </value>
                <value>
                    <fullName>MC-300</fullName>
                </value>
                <value>
                    <fullName>MC-400</fullName>
                </value>
                <value>
                    <fullName>RO-100</fullName>
                </value>
                <value>
                    <fullName>RO-200</fullName>
                </value>
                <value>
                    <fullName>RO-300</fullName>
                </value>
                <value>
                    <fullName>RO-400</fullName>
                </value>
                <value>
                    <fullName>WH-100</fullName>
                </value>
                <value>
                    <fullName>WH-200</fullName>
                </value>
                <value>
                    <fullName>WH-300</fullName>
                </value>
                <value>
                    <fullName>WH-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco, CA</fullName>
                    <default>true</default>
                    <label>San Francisco, CA</label>
                </value>
                <value>
                    <fullName>Austin,TX</fullName>
                </value>
                <value>
                    <fullName>Boulder, CO</fullName>
                </value>
                <value>
                    <fullName>London, England</fullName>
                </value>
                <value>
                    <fullName>New York, NY</fullName>
                </value>
                <value>
                    <fullName>Mumbai, India</fullName>
                </value>
                <value>
                    <fullName>Sydney, Australia</fullName>
                </value>
                <value>
                    <fullName>Tokyo, Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxPay__c</fullName>
        <label>MaxPay</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinPay__c</fullName>
        <label>MinPay</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpenDate__c</fullName>
        <label>OpenDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SkillsRequired__c</fullName>
        <label>SkillsRequired</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                    <default>true</default>
                    <label>New Position</label>
                </value>
                <value>
                    <fullName>Pending-Approval</fullName>
                </value>
                <value>
                    <fullName>Open -Approved</fullName>
                </value>
                <value>
                    <fullName>Closed -Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - NotApproved</fullName>
                </value>
                <value>
                    <fullName>Closed -Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_jb__c</fullName>
        <label>Total jb</label>
        <summaryForeignKey>JobPosting__c.Position__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TravelRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TravelRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FunctionalArea__c</columns>
        <columns>JobDescription__c</columns>
        <columns>MinPay__c</columns>
        <columns>MaxPay__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DaysOpen__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CloseDateRule</fullName>
        <active>true</active>
        <description>Close Date must be specified when Status is
set to &apos;Closed - Filled&apos; or &apos;Closed - Not Approved</description>
        <errorConditionFormula>AND( ISNULL( CloseDate__c ) , OR( ISPICKVAL( Status__c , &quot;Closed - Filled&quot;), ISPICKVAL( Status__c , &quot;Closed - Not Approved&quot;)))</errorConditionFormula>
        <errorDisplayField>CloseDate__c</errorDisplayField>
        <errorMessage>Close Date must be specified when Status
is set to &apos;Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MinPayRule</fullName>
        <active>true</active>
        <description>Min Pay should never exceed Max Pay</description>
        <errorConditionFormula>MinPay__c  &gt;  MaxPay__c</errorConditionFormula>
        <errorDisplayField>MinPay__c</errorDisplayField>
        <errorMessage>Min Pay cannot exceed Max Pay</errorMessage>
    </validationRules>
</CustomObject>